--- a/examples/graph_coloring/config.yaml
+++ b/examples/graph_coloring/config.yaml
@@ -9,6 +9,7 @@ llm:
   secondary_model: "gemini-2.5-flash-lite"
   secondary_model_weight: 0.2
   api_base: "https://generativelanguage.googleapis.com/v1beta/openai/"
+  api_key: "${GEMINI_API_KEY}"
   temperature: 0.7
   max_tokens: 16000
   timeout: 120
